fixed overlapping footer
Relates #11

--- a/contact-page/contact-page_styles.css
+++ b/contact-page/contact-page_styles.css
@@ -67,7 +67,6 @@
 }
 
 .footer__layout {
-  position: absolute;
   display: flex;
   justify-content: space-between;
   padding: 1.5rem 0;
